# resgen-cli

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  schema.json
src/resgen/: __init__.py  config.py  core.py  main.py
src/resgen_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli_export.py
themes/: default.html  default.md
